# HeartRate

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: base.yaml
configs/datasets/: ppg_dalia.yaml  wesad.yaml
configs/eval/: hr_baseline.yaml  hr_stage1.yaml  hr_stage2.yaml  hr_stage3.yaml  hr_stage3_enhanced.yaml  hr_stage4.yaml  hr_stage4_anomaly.yaml  hr_stage4_full.yaml  hr_stage4_full_balanced_v1_analysis.yaml  hr_stage4_irregular.yaml  hr_stage5.yaml  hr_stage5_cnn.yaml
docs/: CODEX_WORKFLOW.md  DATASETS.md  HANDOFF.md  PROJECT_TASKS.md  REBUILD_PLAN.md  STAGE0_DATA_CONTRACT.md  STAGE0_RUNBOOK.md  STAGE1_RUNBOOK.md  STAGE2_RUNBOOK.md  STAGE3_RUNBOOK.md  STAGE4_RUNBOOK.md  STAGE5_RUNBOOK.md  USAGE_GUIDE.md
scripts/: build_results_site_data.py  prepare_stage4_sources.py  prepare_stage5_sources.py  run_stage0_baseline.py  run_stage0_smoke.py  run_stage1_baseline.py  run_stage2_baseline.py  run_stage3_baseline.py  run_stage3_enhanced.py  run_stage4_baseline.py  run_stage4_full.py  run_stage4_irregular_baseline.py  run_stage5_full.py  run_stage5_train_cnn.py
src/heart_rate_cnn/: __init__.py  baseline_hr.py  config.py  metrics.py  preprocess.py  split.py  (+12 more)
tests/: test_data_contract.py  test_metrics.py  test_preprocess.py  test_results_site_data.py  test_stage1_hr.py  test_stage2_beat.py  test_stage3_quality.py  test_stage4_anomaly.py  test_stage4_events.py  test_stage4_full.py  test_stage4_irregular.py  test_stage4_workflow.py  test_stage5_multitask.py  test_stage5_respiration.py
web/: README.md  index.html  package-lock.json  package.json
(+92 files in other folders)
