[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-rate-cnn"
version = "0.1.0"
description = "Stage 0 foundation for public-dataset PPG heart rate experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "PyYAML",
  "tqdm",
  "h5py",
  "joblib",
  "matplotlib",
  "PyWavelets",
  "torch>=2.5,<2.6",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
